# TarsSSM-Py

./: .gitignore  AI_REFERENCE.md  ARCHITECTURE.md  README.md  README_DEPLOY.md  ROADMAP_2026.md  TARS_5_AGENTS_PLAN.md  TARS_Colab.ipynb  TARS_FORMULA_INTEGRATION_MAP.md  TARS_HELIX_GOLDEN.md  TARS_HELIX_v6_DEFINITIVE.md  TARS_Test.ipynb  TARS_Train.ipynb  TARS_Train_Colab.ipynb  Tars point  Tars.txt  Tars_TZ.md  Tars_TZ_v3.md  add_colab_cell.py  colab_test.py  colab_train.ipynb  colab_train.py  config.py  demo_tars.py  kaggle_train.py  launch_tars.py  local_train.py  local_train_extras.py  mega_train.py  quick_full_train.py  requirements.txt  self_learn.py  serve_model.py  setup.py  setup_gdrive.py  setup_tars.py  skill_learn.py  tars_agent.py  tars_bridge_server.py  test_model.py  (+6 more)
New/: reflex_classifier.pt
agent/: __init__.py  clipboard_manager.py  daily_dashboard.py  document_sense.py  executor.py  expense_tracker.py  file_helper.py  gie.py  habit_tracker.py  knowledge_graph.py  knowledge_injector.py  lecture_summarizer.py  meeting_scribe.py  moira.py  notifier.py  orchestrator.py  pomodoro.py  quiz_generator.py  reminders.py  routine_detector.py  schedule.py  self_learn.py  skill_learn.py  system_monitor.py  tars_agent.py
brain/: __init__.py  attention_sink.py  aussm.py  chunked_prefill.py  doubt_engine.py  kernels.cpp  mamba3_mimo.py  mole.py  reflex.py  reflex_classifier.py  rrn.py  speculative.py  tokenizer.py
core/: CMakeLists.txt  build_and_test.bat  tars_core.pyi
core/bindings/: bind.cpp
core/kernels/: attention_diff.cpp  attention_diff.h  bitnet_matmul.cpp  bitnet_matmul.h  embedding_lookup.cpp  embedding_lookup.h  rmsnorm_fused.cpp  rmsnorm_fused.h  rope_fused.cpp  rope_fused.h  smoothquant.cpp  smoothquant.h  softmax_fused.cpp  softmax_fused.h  ssd_scan.cpp  ssd_scan.h  swiglu_fused.cpp  swiglu_fused.h  wkv7_update.cpp  wkv7_update.h
core/runtime/: Cargo.toml  arena.cpp  arena.h  arena.rs  eagle_decode.rs  engine.rs  forward_pass.rs  generate.rs  lib.rs  model_loader.rs  state_cache.rs  tensor.h  tensor.rs  tokenizer.rs
core/tests/: test_kernels.cpp
data/: tars_identity.txt
hub/: main.py  serve_model.py
memory/: __init__.py  __main__.py  context_manager.py  doc_to_lora.py  gaussian_embed.py  leann.npz  leann.py  leann.texts.json  matryoshka.py  memo.py  restore.py  search_utils.py  store.py  titans.py
scripts/: quantize_models.py
sensory/: __init__.py  input_sanitizer.py  intonation_sensor.py  ssm_vad.py  vision.py  voice.py
tests/: conftest.py  test_agent.py  test_agent4_smoke.py  test_core.py  test_doubt_training.py  test_executor.py  test_fixes.py  test_integration.py  test_kernels.py  test_leann.py  test_memory.py  test_model.py  test_neuro_diagnostic.py  test_tars_block.py  test_tokenizer.py  test_training.py
tools/: __init__.py  demo_tars.py  document_tools.py  micro_agents.py  sub_agents.py  telegram_bot.py  web_search.py
training/: README.md  curriculum.py  curriculum_scorer.py  custom_kernels.py  data_pipeline.py  distill_from_teacher.py  download_all.py  download_datasets.py  download_extra_to_drive.py  download_hf_dataset.py  download_wiki.py  dpo.py  evaluate.py  export_to_rust.py  generate_synthetic.py  generate_tars_corpus.py  ingest_to_leann.py  lora.py  merge_models.py  muon.py  night_cycle.py  online_learning.py  quantize_awq.py  quantize_models.py  quantize_voice.py  quick_test.py  (+18 more)
(+176 files in other folders)
